test/files/pos/erasure-nsquared.scala
trait BigCast {
  def bar(x: Int): AnyRef = (
    null
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
      .asInstanceOf[List[AnyRef]].head
  )
}
